# ZaguanBlade

./: .gitignore  IMPLEMENTATION_STATUS.md  LICENSE  README.md  index.html  next.config.ts  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
.zblade/: .gitignore  instructions.md  project.json
.zblade/config/: settings.json
docs/: AI_LSP_INTEGRATION.md  ARCHITECTURE.md  BLADE_CHANGE_PROTOCOL.md  BLADE_PROTOCOL_V1.1_MIGRATION.md  BUILD_FROM_SOURCE.md  CODEMIRROR_VS_MONACO_INTEGRATION.md  CODEX_SYSTEM_PROMPT_ANALYSIS.md  COMMAND_EXECUTION_FEATURE.md  EVENTS.md  FIXES_SUMMARY.md  FRONTEND_V1.1_STATUS.md  FUTURE_EVENTS.md  GITIGNORE_SUPPORT.md  HISTORY_IMPLEMENTATION_FRONTEND.md  IMPLEMENTATION-PLAN-tree-sitter-lsp.md  INSPIRATION_ANALYSIS.md  IPC_AUDIT.md  MULTI_PATCH_IMPLEMENTATION_PLAN.md  NEW_TOOLS_IMPLEMENTATION.md  OPENAI_COMPAT_SETUP.md  PATCH_ACCEPTANCE_IMPLEMENTATION.md  PROTOCOL_AUDIT_REPORT.md  REFACTORING_PLAN.md  RFC-002-client-side-unlimited-context.md  RFC-003-tree-sitter-integration.md  RFC-004-lsp-tree-sitter-integration-strategy.md  RFC-005-bcp-extensions-for-lsp-tree-sitter.md  ROADMAP.md  RUST-FIRST-ARCHITECTURE.md  TERMINAL_INTEGRATION.md  TODO-2026-01-15.md  TODO.md  TOOL_CALLS.md  UI_IMPROVEMENTS_ROADMAP.md  USER_GUIDE.md  V1.1_IMPLEMENTATION_SUMMARY.md  VIRTUAL_BUFFER_IMPLEMENTATION.md  VISUAL_IMPROVEMENTS_CHANGELOG.md  alpha-1-release-criteria.md  blade-protocol-conversation-history-addendum-2026-01-16.md  (+7 more)
docs/internal/: zblade-file-changes.md
messages/: en.json
src/: App.tsx  i18n.ts  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: agentic_loop.rs  ai_workflow.rs  app_state.rs  blade_client.rs  blade_protocol.rs  blade_ws_client.rs  chat_manager.rs  chat_orchestrator.rs  config.rs  conversation.rs  conversation_store.rs  core_state.rs  environment.rs  ephemeral_commands.rs  ephemeral_documents.rs  events.rs  explorer.rs  feature_flags.rs  fs_watcher.rs  git.rs  gitignore_filter.rs  idempotency.rs  lib.rs  local_artifacts.rs  local_index.rs  main.rs  project.rs  project_settings.rs  project_state.rs  protocol.rs  protocol_dispatcher.rs  reasoning_parser.rs  screenshot.rs  terminal.rs  tools.rs  uncommitted_changes.rs  utils.rs  warmup.rs  workflow_controller.rs  workspace_manager.rs  (+2 more)
src-tauri/src/ai_workflow/: change_parser.rs  edit_parser.rs  tool_defs.rs
src-tauri/src/chat/: handler.rs  mod.rs
src-tauri/src/commands/: cache.rs  changes.rs  chat.rs  files.rs  history.rs  local_context.rs  misc.rs  mod.rs  project.rs  screenshot.rs  settings.rs  state.rs  tools.rs  uncommitted.rs
src-tauri/src/context_assembly/: assembler.rs  budget.rs  mod.rs  strategy.rs
src-tauri/src/history/: mod.rs
src-tauri/src/indexer/: builder.rs  cache.rs  handler.rs  manager.rs  mod.rs  preview.rs  types.rs  watcher.rs
src-tauri/src/language_service/: handler.rs  indexer.rs  mod.rs  service.rs
src-tauri/src/lsp/: client.rs  manager.rs  mod.rs  types.rs
src-tauri/src/models/: anthropic.rs  mod.rs  ollama.rs  openai_compat.rs  registry.rs
src-tauri/src/semantic_patch/: applier.rs  diff.rs  mod.rs  patch.rs
src-tauri/src/symbol_index/: mod.rs  search.rs  store.rs
src-tauri/src/tool_execution/: executor.rs  mod.rs
src-tauri/src/tree_sitter/: mod.rs  parser.rs  query.rs  symbol.rs
src/app/: globals.css  layout.tsx  page.tsx
src/components/: ChatInput.tsx  ChatMessage.tsx  ChatPanel.tsx  ChatTabBar.tsx  ChatTerminal.tsx  CodeEditor.tsx  CommandApprovalCard.tsx  CommandApprovalModal.tsx  CommandCenter.tsx  CommandOutputDisplay.tsx  CompactModelSelector.tsx  (+32 more)
(+79 files in other folders)
