[package]
name = "zblade"
version = "0.0.1-alpha"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "zblade_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12.28", features = ["json", "stream", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["clock", "serde"] }
futures = "0.3"
regex = "1.12.2"
walkdir = "2.5.0"
directories = "6.0.0"
futures-util = "0.3"
dotenvy = "0.15"
portable-pty = "0.9.0"
lazy_static = "1.4"
dirs = "6.0.0"
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
uuid = { version = "1", features = ["v4", "serde"] }

[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile more slowly, but better optimization
lto = true # Enable Link Time Optimization
opt-level = 3 # Optimize for speed
strip = true # Strip symbols from binary
