[package]
name = "zblade"
version = "0.0.3-alpha"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "zblade_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12.28", features = ["json", "stream", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["clock", "serde"] }
futures = "0.3"
regex = "1.12.2"
walkdir = "2.5.0"
directories = "6.0.0"
futures-util = "0.3"
dotenvy = "0.15"
portable-pty = "0.9.0"
lazy_static = "1.4"
dirs = "6.0.0"
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
uuid = { version = "1", features = ["v4", "serde"] }
clap = { version = "4", features = ["derive"] }
glob = "0.3"
rusqlite = { version = "0.32", features = ["bundled"] }
notify = "6.1.1"

# Tree-sitter for AST parsing (Rust-first architecture)
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-python = "0.23"

# LSP types for language server integration
lsp-types = "0.97"

[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile more slowly, but better optimization
lto = true # Enable Link Time Optimization
opt-level = 3 # Optimize for speed
strip = false # Do not strip symbols (required for Tauri bundler type injection)

[dev-dependencies]
tempfile = "3.24.0"
